--- a/templates/list_practices.html
+++ b/templates/list_practices.html
@@ -23,17 +23,17 @@
             <thead class="thead-light">
                 <tr>
                     <th class="align-middle" scope="col">ID</th>
-                    <th class="align-middle" scope="col">Title</th>
-                    <th class="align-middle" scope="col">Intervention</th>
-                    <th class="align-middle" scope="col"><a class="btn btn-primary disabled" href="/?page={{ page }}&query={{ query }}" style="width: 100px;">Create</a></th>
+                    <th class="align-middle" scope="col" style="width: 60%">Title</th>
+                    <th class="align-middle" scope="col" style="width: 40%">Intervention</th>
+                    <th class="align-middle" scope="col"><a class="btn btn-primary" href="/practice/create?page={{ page }}&query={{ query }}&last={{ pager[-1] }}" style="width: 100px;">Create</a></th>
                 </tr>
             </thead>
             <tbody>
                 {% for practice in practices %}
                     <tr>
                         <th scope="row">{{ practice.id }}</th>
-                        <td style="width: 60%">{{ practice.title }}</td>
-                        <td style="width: 40%">{{ practice.name_of_intervention }}</td>
+                        <td>{{ practice.title }}</td>
+                        <td>{{ practice.name_of_intervention }}</td>
                         <td>
                             {% if practice.status == "APPROVED" %}
                                 {% set status_btn = "btn-outline-primary" %}
@@ -52,7 +52,7 @@
             <li class="page-item {% if page == 0 %}disabled{% endif %}">
                 <a class="page-link" href="/?page={{ page - 1 }}&query={{ query }}" tabindex="-1">Previous</a>
             </li>
-            {% for p in pages %}
+            {% for p in pager %}
                 {% if p is number %}
                     {% if p == page %}
                         <li class="page-item active"><a class="page-link"> {{ p + 1 }} </a></li>
@@ -63,7 +63,7 @@
                     <li class="page-item disabled"><a class="page-link"> {{ p }} </a></li>
                 {% endif %}
             {% endfor %}
-            <li class="page-item {% if page == pages[-1] %}disabled{% endif %}">
+            <li class="page-item {% if page == pager[-1] %}disabled{% endif %}">
                 <a class="page-link" href="/?page={{ page + 1 }}&query={{ query }}">Next</a>
             </li>
         </ul>
