--- a/templates/list_practices.html
+++ b/templates/list_practices.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <title>Promising Practices</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
             <a class="navbar-brand">Promising Practices to Address the Opioid Epidemic</a>
             <form class="form-inline">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" value="{% if query != "*:*" %}{{ query }}{% else %}{% endif %}">
-                <button class="btn btn-outline-success" type="submit" style="width: 100px;">Search</button>
+                <button class="btn btn-outline-info" type="submit"><i class="fas fa-search"></i></button>
             </form>
         </nav>
         <table class="table">
@@ -25,7 +25,7 @@
                     <th class="align-middle" scope="col">ID</th>
                     <th class="align-middle" scope="col" style="width: 60%">Title</th>
                     <th class="align-middle" scope="col" style="width: 40%">Intervention</th>
-                    <th class="align-middle" scope="col"><a class="btn btn-primary" href="/practice/create?page={{ page }}&query={{ query }}&last={{ pager[-1] }}" style="width: 100px;">Create</a></th>
+                    <th class="align-middle" scope="col"><a class="btn btn-success" href="/practice/create?page={{ page }}&query={{ query }}&last={{ pager[-1] }}" style="width: 100px;">Create</a></th>
                 </tr>
             </thead>
             <tbody>
