--- a/templates/list_practices.html
+++ b/templates/list_practices.html
@@ -18,6 +18,7 @@
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" value="{% if query != "*:*" %}{{ query }}{% else %}{% endif %}">
                 <button class="btn btn-outline-info" type="submit"><i class="fas fa-search"></i></button>
             </form>
+            <a class="btn btn-outline-primary" href="/practice/create?page={{ page }}&query={{ query }}&last={{ pager[-1] }}">Create</a>
         </nav>
         <table class="table">
             <thead class="thead-light">
@@ -25,7 +26,7 @@
                     <th class="align-middle" scope="col">ID</th>
                     <th class="align-middle" scope="col" style="width: 60%">Title</th>
                     <th class="align-middle" scope="col" style="width: 40%">Intervention</th>
-                    <th class="align-middle" scope="col"><a class="btn btn-success" href="/practice/create?page={{ page }}&query={{ query }}&last={{ pager[-1] }}" style="width: 100px;">Create</a></th>
+                    <th class="align-middle" scope="col"></th>
                 </tr>
             </thead>
             <tbody>
@@ -36,7 +37,7 @@
                         <td>{{ practice.name_of_intervention }}</td>
                         <td>
                             {% if practice.status == "APPROVED" %}
-                                {% set status_btn = "btn-outline-primary" %}
+                                {% set status_btn = "btn-outline-success" %}
                             {% elif practice.status == "REVOKED" %}
                                 {% set status_btn = "btn-warning" %}
                             {% else %}
