--- a/templates/list_practices.html
+++ b/templates/list_practices.html
@@ -13,12 +13,11 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-light bg-light">
-            <a class="navbar-brand">Promising Practices to Address the Opioid Epidemic</a>
+            <a class="btn btn-outline-primary" href="http://54.173.176.161:8983/solr/banana/promising_practices_tst/index.html"><i class="far fa-chart-bar"></i> Promising Practices Dashboard</a>
             <form class="form-inline">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" value="{% if query != "*:*" %}{{ query }}{% else %}{% endif %}">
                 <button class="btn btn-outline-info" type="submit"><i class="fas fa-search"></i></button>
             </form>
-            <a class="btn btn-outline-primary" href="/practice/create?page={{ page }}&query={{ query }}&last={{ pager[-1] }}">Create</a>
         </nav>
         <table class="table">
             <thead class="thead-light">
@@ -26,7 +25,7 @@
                     <th class="align-middle" scope="col">ID</th>
                     <th class="align-middle" scope="col" style="width: 60%">Title</th>
                     <th class="align-middle" scope="col" style="width: 40%">Intervention</th>
-                    <th class="align-middle" scope="col"></th>
+                    <th class="align-middle" scope="col"><a class="btn btn-success" href="/practice/create?page={{ page }}&query={{ query }}&last={{ pager[-1] }}"style="width: 100px;">Create</a></th>
                 </tr>
             </thead>
             <tbody>
