Header size on delete view.

--- a/templates/practice/delete.html
+++ b/templates/practice/delete.html
@@ -4,7 +4,9 @@
 
 {% block content %}
     <div class="card my-2">
-        <h5 class="card-header">Delete Practice # {{ id }}</h5>
+        <div class="card-header">
+            Delete Practice # {{ id }}
+        </div>
         <div class="card-body">
             <h5 class="card-title">Are you sure you want to delete this item?</h5>
             <p class="card-text">{{ title }}</p>
