--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -12,6 +12,7 @@
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input class="form-control" name="username" id="username" placeholder="Enter username">
+                    <small id="usernameHelp" class="form-text text-muted">Use admin::admin or user::user</small>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
