--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -6,13 +6,13 @@
     <form method="post">
         <div class="card my-2">
             <div class="card-header">
-                Log In into Promising Practices Data
+                Login to Promising Practices Data Operations
             </div>
             <div class="card-body">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input class="form-control" name="username" id="username" placeholder="Enter username">
-                    <small id="usernameHelp" class="form-text text-muted">Use admin::admin or user::user</small>
+                    <small id="usernameHelp" class="form-text text-muted">Try admin::admin, data::data, or qa::qa</small>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
