--- a/templates/base.html
+++ b/templates/base.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="http://www.air.org"><img src="../static/air.png" alt="AIR" height="30"></a>
+        <a class="navbar-brand ml-2" href="http://www.air.org"><img src="../static/air.png" alt="AIR" height="30"></a>
         {% if g.user %}
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" value="{% if query != "*:*" %}{{ query }}{% else %}{% endif %}">
-            <button class="btn btn-outline-info" type="submit"><i class="fas fa-search"></i></button>
+            <button class="btn btn-outline-info hidden-sm" type="submit"><i class="fas fa-search"></i></button>
         </form>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,8 +26,8 @@
             <div class="navbar-nav mr-auto"></div>
             <a class="nav-link" href="http://54.173.176.161:8983/solr/banana/promising_practices_tst/index.html"><i class="far fa-chart-bar"></i> Dashboard</a>
             <div class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ g.user["full_name"] }}</a>
-                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="nav-link dropdown-toggle mr-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ g.user["full_name"] }}</a>
+                <div class="dropdown-menu"  aria-labelledby="navbarDropdown">
 {#                    <a class="dropdown-item" href="#">Action</a>#}
 {#                    <a class="dropdown-item" href="#">Another action</a>#}
 {#                    <div class="dropdown-divider"></div>#}
