--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         {% if g.user %}
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" value="{% if query != "*:*" %}{{ query }}{% else %}{% endif %}">
-            <button class="btn btn-outline-info hidden-sm" type="submit"><i class="fas fa-search"></i></button>
+            <button class="btn btn-outline-info d-none d-sm-block" type="submit"><i class="fas fa-search"></i></button>
         </form>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
