--- a/templates/practice/details.html
+++ b/templates/practice/details.html
@@ -26,13 +26,13 @@
                 <th class="align-middle" scope="row">Status</th>
                 <th class="align-middle" scope="row">
                     <div class="btn-toolbar justify-content-between">
-                        <h5 class="mt-1"><span class="mt-1 badge {{ status_badge }}">{{ practice.status|capitalize }}</span></h5>
+                        <h5 class="d-inline mt-1"><span class="mt-1 badge {{ status_badge }}">{{ practice.status|capitalize }}</span></h5>
                         <form method="post">
                             <input type="hidden" name="status" value="{{ practice.status }}">
                             {% if practice.status == "APPROVED" %}
-                                <button class="btn btn-outline-warning" style="width: 90px;" type="submit">Revoke</button>
+                                <button class="btn btn-outline-warning d-inline" style="width: 90px;" type="submit">Revoke</button>
                             {% else %}
-                                <button class="btn btn-outline-success" style="width: 90px;" type="submit">Approve</button>
+                                <button class="btn btn-outline-success d-inline" style="width: 90px;" type="submit">Approve</button>
                             {% endif %}
                         </form>
                     </div>
