--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -3,7 +3,7 @@
 {% block title %}Log In{% endblock %}
 
 {% block content %}
-    <form method="post">
+    <form class="needs-validation" method="post" novalidate>
         <div class="card my-2">
             <div class="card-header">
                 Login to Promising Practices Data Operations
@@ -11,12 +11,18 @@
             <div class="card-body">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input class="form-control" name="username" id="username" placeholder="Enter username">
+                    <input class="form-control" name="username" id="username" placeholder="Enter username" required>
+                    <div class="invalid-feedback">
+                        Please provide a username.
+                    </div>
                     <small id="usernameHelp" class="form-text text-muted">Try admin::admin, data::data, or qa::qa</small>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                    <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
+                    <div class="invalid-feedback">
+                        Please provide a password.
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Log In</button>
             </div>
