--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block content %}
-    <form method="post">
+    <form class="needs-validation" method="post" novalidate>
         <div class="card my-2">
             <div class="card-header">
                 Create a New Account
@@ -11,18 +11,48 @@
             <div class="card-body">
                 <div class="form-group">
                     <label for="username">Username</label>
-                    <input class="form-control" name="username" id="username" placeholder="Enter username">
+                    <input class="form-control" name="username" id="username" placeholder="Enter username" required>
+                    <div class="invalid-feedback">
+                        Please provide a username.
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="fullname">Full Name</label>
-                    <input class="form-control" name="fullname" id="fullname" placeholder="Enter full name">
+                    <input class="form-control" name="fullname" id="fullname" placeholder="Enter full name" required>
+                    <div class="invalid-feedback">
+                        Please provide a full name.
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+                    <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
+                    <div class="invalid-feedback">
+                        Please choose a password.
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password">Confirm Password</label>
+                    <input type="password" class="form-control" name="password" id="confirm_password" placeholder=" Confirm Password" required>
+                    <div class="invalid-feedback">
+                        Passwords don't match.
+                    </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Register</button>
             </div>
         </div>
     </form>
+
+    <script>
+        var password = document.getElementById("password"),
+            confirm_password = document.getElementById("confirm_password");
+        function validatePassword(){
+          if(password.value != confirm_password.value) {
+            confirm_password.setCustomValidity("Passwords don't match.");
+          } else {
+            confirm_password.setCustomValidity('');
+          }
+        }
+        password.onchange = validatePassword;
+        confirm_password.onkeyup = validatePassword;
+    </script>
 {% endblock %}
