--- a/templates/practice/index.html
+++ b/templates/practice/index.html
@@ -9,7 +9,7 @@
             <th class="align-middle" scope="col">ID</th>
             <th class="align-middle" scope="col" style="width: 60%">Title</th>
             <th class="align-middle" scope="col" style="width: 40%">Intervention</th>
-            <th class="align-middle" scope="col"><a class="btn btn-success" href="/practice/create?page={{ page }}&query={{ query }}"style="width: 100px;">Create</a></th>
+            <th class="align-middle" scope="col"><a class="btn btn-success" href="{{ url_for('practice.create', page=page, query=query) }}" style="width: 100px;">Create</a></th>
         </tr>
     </thead>
     <tbody>
