--- a/templates/practice/delete.html
+++ b/templates/practice/delete.html
@@ -5,7 +5,7 @@
 {% block content %}
     <div class="card my-2">
         <div class="card-header">
-            Delete Practice # {{ id }}
+            Delete practice # {{ id }}
         </div>
         <div class="card-body">
             <h5 class="card-title">Are you sure you want to delete this item?</h5>
