--- a/templates/practice/edit.html
+++ b/templates/practice/edit.html
@@ -5,7 +5,7 @@
 {% block content %}
     <form method="post">
         <input type="hidden" name="id" value="{{ practice.id }}">
-        <input type="hidden" name="status" value="{{ practice.status }}">
+
         <table class="table my-2">
             <thead class="thead-light">
                 <tr>
@@ -19,15 +19,9 @@
                     <td>{{ practice.id }}</td>
                 </tr>
                 <tr>
+                    <input type="hidden" name="status" value="{{ practice.status }}">
                     <th scope="row">Status</th>
-                    {% if practice.status == "APPROVED" %}
-                        {% set status_badge = "badge-success" %}
-                    {% elif practice.status == "REVOKED" %}
-                        {% set status_badge = "badge-warning" %}
-                    {% else %}
-                        {% set status_badge = "badge-secondary" %}
-                    {% endif %}
-                    <td><h5><span class="badge {{ status_badge }}">{{ practice.status|capitalize }}</span></h5></td>
+                    <td><h5><span class="badge {{ styles[practice.status] }}">{{ practice.status|capitalize }}</span></h5></td>
                 </tr>
                 <tr >
                     <th scope="row">Title</th>
@@ -152,7 +146,7 @@
         </table>
         <div class="btn-toolbar justify-content-between my-4" role="toolbar">
             <div role="group">
-                <a class="btn btn-secondary mr-2" style="width: 90px;" href="/practice/{{ practice.id }}?page={{ page }}&query={{ query }}">Cancel</a>
+                <a class="btn btn-secondary mr-2" style="width: 90px;" href="{{ url_for("practice.details", id=practice.id, page=page, query=query) }}">Cancel</a>
                 <button class="btn btn-danger" style="width: 80px;" type="submit">Save</button>
             </div>
         </div>
