--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">Confirm Password</label>
-                    <input type="password" class="form-control" name="password" id="confirm_password" placeholder=" Confirm Password" required>
+                    <input type="password" class="form-control" name="password" id="confirm_password" placeholder=" Confirm password" required>
                     <div class="invalid-feedback">
                         Passwords don't match.
                     </div>
