--- a/templates/base.html
+++ b/templates/base.html
@@ -27,10 +27,9 @@
             <a class="nav-link" href="http://54.173.176.161:8983/solr/banana/promising_practices_tst/index.html"><i class="far fa-chart-bar"></i> Dashboard</a>
             <div class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle mr-2" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ g.user["full_name"] }}</a>
-                <div class="dropdown-menu"  aria-labelledby="navbarDropdown">
-{#                    <a class="dropdown-item" href="#">Action</a>#}
-{#                    <a class="dropdown-item" href="#">Another action</a>#}
-{#                    <div class="dropdown-divider"></div>#}
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="{{ url_for('admin.workflow') }}">Workflow</a>
+                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" href="{{ url_for('auth.logout') }}">Log Out</a>
                 </div>
             </div>
