--- a/templates/workflow.html
+++ b/templates/workflow.html
@@ -5,6 +5,6 @@
 {% block content %}
     <figure class="figure">
         <img class="figure-img img-fluid" src="{{ url_for('static', filename='workflow.png') }}" alt="Workflow">
-        <figcaption class="figure-caption text-right">Workflow specification for the promising practices data operations.</figcaption>
+        <figcaption class="figure-caption text-right">Workflow specification for the promising practices data operations</figcaption>
     </figure>
 {% endblock %}
