--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -6,7 +6,7 @@
     <form class="needs-validation" method="post" novalidate>
         <div class="card my-2">
             <div class="card-header">
-                Create a New Account
+                Create a new account
             </div>
             <div class="card-body">
                 <div class="form-group">
