--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -6,7 +6,7 @@
     <form class="needs-validation" method="post" novalidate>
         <div class="card my-2">
             <div class="card-header">
-                Login to Promising Practices Data Operations
+                Sign in to Promising Practices Data Operations
             </div>
             <div class="card-body">
                 <div class="form-group">
@@ -24,7 +24,7 @@
                         Please provide a password.
                     </div>
                 </div>
-                <button type="submit" class="btn btn-primary">Log In</button>
+                <button type="submit" class="btn btn-primary">Sign in</button>
             </div>
         </div>
     </form>
